# agent-guard

./: .gitignore  README.md  README_CN.md
analytics/: .gitignore  README.md  pyproject.toml
analytics/src/: __init__.py
analytics/src/api/: __init__.py  main.py
analytics/src/api/routes/: anomaly.py  health.py  risk.py
analytics/src/services/: anomaly_detection.py  risk_scoring.py
analytics/src/utils/: db.py
backend/: .gitignore  README.md  pom.xml
backend/src/main/java/com/agentguard/: AgentGuardApplication.java
backend/src/main/resources/: application-prod.yml  application.yml  banner.txt  logback-spring.xml
backend/src/main/resources/db/migration/: V1__init_schema.sql
backend/src/main/resources/mapper/: AgentPolicyBindingMapper.xml  ApprovalMapper.xml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: agent.ts  alert.ts  approval.ts  settings.ts  stats.ts
frontend/src/components/: CodeBlock.vue  TagsBar.vue
frontend/src/layouts/: DefaultLayout.vue
frontend/src/pages/agent/: Index.vue
frontend/src/pages/alert/: Index.vue
frontend/src/pages/approval/: Index.vue
frontend/src/pages/auth/: Login.vue
frontend/src/pages/dashboard/: Index.vue
frontend/src/pages/log/: Index.vue
frontend/src/pages/policy/: Index.vue
frontend/src/pages/settings/: Index.vue
frontend/src/pages/stats/: Index.vue
frontend/src/router/: index.ts
frontend/src/types/: agent.d.ts  alert.d.ts  approval.d.ts  log.d.ts  policy.d.ts  stats.d.ts
frontend/src/utils/: request.ts
(+169 files in other folders)
